--- a/lineup/data/config/lineups.yaml
+++ b/lineup/data/config/lineups.yaml
@@ -1,5 +1,5 @@
 years: ['2016']
-gameid: '201510270GSW'
+gameids: ['201510270GSW', '201510270CHI']
 time_seperator: 'min'
 cookies: {
     'srcssfull': 'yes',
