--- a/lineup/data/config/lineups.yaml
+++ b/lineup/data/config/lineups.yaml
@@ -1,4 +1,3 @@
-years: ['2016']
 gameids: ['201510270GSW', '201510270CHI']
 limit: False
 time_seperator: 'min'
@@ -55,3 +54,19 @@ adjusted: [
 'away_0_apm','away_1_apm','away_2_apm','away_3_apm','away_4_apm',
 'outcome'
 ]
+basketball_value:
+  HomePlayer1Name: 'home_0'
+  HomePlayer2Name: 'home_1'
+  HomePlayer3Name: 'home_2'
+  HomePlayer4Name: 'home_3'
+  HomePlayer5Name: 'home_4'
+  AwayPlayer1Name: 'away_0'
+  AwayPlayer2Name: 'away_1'
+  AwayPlayer3Name: 'away_2'
+  AwayPlayer4Name: 'away_3'
+  AwayPlayer5Name: 'away_4'
+  StartTime: 'starting_minute'
+  EndTime: 'end_minute'
+  GameID: 'game'
+years: ['2007','2008','2009','2010','2011','2012', '2013', '2014', '2015','2016']
+
